--- a/static/pages/login.html
+++ b/static/pages/login.html
@@ -11,78 +11,91 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                background: #f3f4f6;
-                font-family: sans-serif;
+                background: #121212;
+                font-family: "Segoe UI", sans-serif;
+                color: #e0e0e0;
             }
 
             .card {
-                background: white;
-                padding: 20px;
-                border-radius: 8px;
-                box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-                width: 300px;
+                background: #1e1e1e;
+                padding: 30px;
+                border-radius: 12px;
+                width: 320px;
+                box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
             }
 
             h1 {
-                margin: 0 0 16px;
-                font-size: 20px;
                 text-align: center;
+                margin-bottom: 20px;
+                font-size: 22px;
             }
 
             .field {
-                margin-bottom: 12px;
+                margin-bottom: 15px;
                 display: flex;
                 flex-direction: column;
             }
+
             label {
+                margin-bottom: 6px;
                 font-size: 14px;
-                margin-bottom: 4px;
+                color: #bbb;
             }
+
             input {
-                padding: 8px;
-                border: 1px solid #ccc;
-                border-radius: 4px;
+                padding: 10px;
+                border-radius: 6px;
+                border: 1px solid #333;
+                background: #2a2a2a;
+                color: #e0e0e0;
                 font-size: 14px;
             }
 
-            .actions {
-                margin-top: 12px;
+            input:focus {
+                border-color: #4f46e5;
+                outline: none;
             }
-            button {
+
+            .actions button {
                 width: 100%;
-                padding: 10px;
+                padding: 12px;
                 border: none;
-                border-radius: 4px;
-                background: #4b5563;
+                border-radius: 6px;
+                background: #4f46e5;
                 color: white;
                 font-size: 14px;
                 cursor: pointer;
+                transition: 0.2s;
             }
-            button:hover {
-                background: #374151;
+
+            .actions button:hover {
+                background: #3730a3;
             }
 
             .message {
                 text-align: center;
+                margin-top: 10px;
                 font-size: 14px;
-                margin-top: 8px;
             }
+
             .error {
-                color: #dc2626;
+                color: #f87171;
             }
             .success {
-                color: #16a34a;
+                color: #4ade80;
             }
 
             .footer {
-                margin-top: 16px;
+                margin-top: 18px;
                 font-size: 13px;
                 text-align: center;
             }
+
             .footer a {
-                color: #2563eb;
+                color: #818cf8;
                 text-decoration: none;
             }
+
             .footer a:hover {
                 text-decoration: underline;
             }
@@ -96,7 +109,6 @@
                     <label for="username">Username</label>
                     <input id="username" name="username" type="text" required />
                 </div>
-
                 <div class="field">
                     <label for="password">Password</label>
                     <input
@@ -106,24 +118,18 @@
                         required
                     />
                 </div>
-
                 <div class="actions">
                     <button type="submit">Sign in</button>
                 </div>
                 <p id="message" class="message"></p>
-
                 <p class="footer">
-                    Have no account?
-                    <a href="/auth/register">Sign up</a>.
+                    Have no account? <a href="/auth/register">Sign up</a>.
                 </p>
-
                 <p class="footer">
-                    Some troubles?
-                    <a href="/support">Contact support</a>.
+                    Some troubles? <a href="/support">Contact support</a>.
                 </p>
             </form>
         </main>
-
         <script>
             const form = document.getElementById("loginForm");
             const message = document.getElementById("message");
@@ -131,18 +137,8 @@
             form.addEventListener("submit", async (e) => {
                 e.preventDefault();
                 message.textContent = "";
-
                 const formData = new FormData(form);
                 const data = Object.fromEntries(formData.entries());
-
-                console.log(
-                    "Trying to login with username '" +
-                        data["username"] +
-                        "' and password '" +
-                        data["password"] +
-                        "'."
-                );
-
                 try {
                     const res = await fetch("/auth/login", {
                         method: "POST",
@@ -150,20 +146,13 @@
                         body: JSON.stringify(data),
                         credentials: "include",
                     });
-
-                    // Getting data
-                    res_data = await res.json();
-
-                    // Getting status code
-                    status_code = res_data["status"];
-                    console.log("Status Code: " + status_code);
-
-                    if (status_code == 200) {
-                        message.textContent = res_data["message"];
+                    const res_data = await res.json();
+                    if (res_data.status === 200) {
+                        message.textContent = res_data.message;
                         message.className = "message success";
                     } else {
                         message.textContent =
-                            res.error || "Invalid credentials";
+                            res_data.error || "Invalid credentials";
                         message.className = "message error";
                     }
                 } catch (err) {
