Refactor authentication and session management
- Removed the old auth router and split functionality into separate modules for registration, login, and logout.
- Introduced a session model to manage user sessions in the database.
- Updated the login and registration processes to create and manage user sessions.
- Added middleware to retrieve the current user based on session cookies.
- Refactored post handling to ensure user authentication before allowing post creation.
- Created a profile router to display user information.
- Updated HTML templates for login, registration, and profile pages to improve user experience.
- Removed deprecated post page and integrated post display into the new template system.

--- a/app/static/pages/home.html
+++ b/app/static/pages/home.html
@@ -1,108 +1,1 @@
-<!DOCTYPE html>
-<html lang="ru">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Личный кабинет</title>
-        <style>
-            body {
-                margin: 0;
-                height: 100vh;
-                display: flex;
-                flex-direction: column;
-                background: #121212;
-                font-family: "Segoe UI", sans-serif;
-                color: #e0e0e0;
-            }
-
-            header {
-                display: flex;
-                justify-content: flex-end;
-                align-items: center;
-                padding: 15px 20px;
-                background: #1e1e1e;
-                border-bottom: 1px solid #333;
-            }
-
-            header .username {
-                margin-right: 20px;
-                font-size: 14px;
-                color: #bbb;
-            }
-
-            header button {
-                padding: 8px 14px;
-                border: none;
-                border-radius: 6px;
-                background: #4f46e5;
-                color: white;
-                font-size: 14px;
-                cursor: pointer;
-                transition: 0.2s;
-            }
-
-            header button:hover {
-                background: #3730a3;
-            }
-
-            main {
-                flex: 1;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
-
-            .card {
-                background: #1e1e1e;
-                padding: 30px;
-                border-radius: 12px;
-                width: 400px;
-                text-align: center;
-                box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
-            }
-
-            h1 {
-                margin-bottom: 20px;
-                font-size: 22px;
-            }
-        </style>
-    </head>
-    <body>
-        <header>
-            <span class="username" id="username">👤 </span>
-            <button id="logoutBtn" style="display: none">Logout</button>
-        </header>
-
-        <main>
-            <div class="card">
-                <h1 id="welcomeTitle">Добро пожаловать!</h1>
-                <p>Это ваш личный кабинет.</p>
-            </div>
-        </main>
-
-        <script>
-            const logoutBtn = document.getElementById("logoutBtn");
-            const usernameSpan = document.getElementById("username");
-            const welcomeTitle = document.getElementById("welcomeTitle");
-
-            const userId = localStorage.getItem("user_id");
-            const username = localStorage.getItem("username");
-
-            if (userId && username) {
-                logoutBtn.style.display = "inline-block";
-                usernameSpan.textContent = "👤 " + username;
-                welcomeTitle.textContent =
-                    "Добро пожаловать, " + username + "!";
-            } else {
-                // если нет данных — редиректим на логин
-                window.location.href = "/auth/login";
-            }
-
-            logoutBtn.addEventListener("click", () => {
-                localStorage.removeItem("user_id");
-                localStorage.removeItem("username");
-                window.location.href = "/auth/login";
-            });
-        </script>
-    </body>
-</html>
+<h1>Coming soon</h1>
