--- a/app/static/pages/register.html
+++ b/app/static/pages/register.html
@@ -15,7 +15,6 @@
                 font-family: "Segoe UI", sans-serif;
                 color: #e0e0e0;
             }
-
             .card {
                 background: #1e1e1e;
                 padding: 30px;
@@ -23,25 +22,21 @@
                 width: 320px;
                 box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
             }
-
             h1 {
                 text-align: center;
                 margin-bottom: 20px;
                 font-size: 22px;
             }
-
             .field {
                 margin-bottom: 15px;
                 display: flex;
                 flex-direction: column;
             }
-
             label {
                 margin-bottom: 6px;
                 font-size: 14px;
                 color: #bbb;
             }
-
             input {
                 padding: 10px;
                 border-radius: 6px;
@@ -50,12 +45,10 @@
                 color: #e0e0e0;
                 font-size: 14px;
             }
-
             input:focus {
                 border-color: #4f46e5;
                 outline: none;
             }
-
             .actions button {
                 width: 100%;
                 padding: 12px;
@@ -67,35 +60,29 @@
                 cursor: pointer;
                 transition: 0.2s;
             }
-
             .actions button:hover {
                 background: #3730a3;
             }
-
             .message {
                 text-align: center;
                 margin-top: 10px;
                 font-size: 14px;
             }
-
             .error {
                 color: #f87171;
             }
             .success {
                 color: #4ade80;
             }
-
             .footer {
                 margin-top: 18px;
                 font-size: 13px;
                 text-align: center;
             }
-
             .footer a {
                 color: #818cf8;
                 text-decoration: none;
             }
-
             .footer a:hover {
                 text-decoration: underline;
             }
@@ -119,10 +106,10 @@
                     />
                 </div>
                 <div class="field">
-                    <label for="confirm_password">Confirm Password</label>
+                    <label for="password_repeat">Repeat Password</label>
                     <input
-                        id="confirm_password"
-                        name="confirm_password"
+                        id="password_repeat"
+                        name="password_repeat"
                         type="password"
                         required
                     />
@@ -131,25 +118,26 @@
                     <button type="submit">Sign up</button>
                 </div>
                 <p id="message" class="message"></p>
-                <p class="footer">
-                    Already have an account? <a href="/auth/login">Sign in</a>.
-                </p>
             </form>
+            <div class="footer">
+                Already have an account? <a href="/auth/login">Sign in</a>
+            </div>
         </main>
+
         <script>
             const registerForm = document.getElementById("registerForm");
-            const registerMessage = document.getElementById("message");
+            const message = document.getElementById("message");
 
             registerForm.addEventListener("submit", async (e) => {
                 e.preventDefault();
-                registerMessage.textContent = "";
+                message.textContent = "";
 
                 const formData = new FormData(registerForm);
                 const data = Object.fromEntries(formData.entries());
 
-                if (data.password !== data.confirm_password) {
-                    registerMessage.textContent = "Passwords do not match!";
-                    registerMessage.className = "message error";
+                if (data.password !== data.password_repeat) {
+                    message.textContent = "Пароли не совпадают";
+                    message.className = "message error";
                     return;
                 }
 
@@ -157,27 +145,26 @@
                     const res = await fetch("/auth/register", {
                         method: "POST",
                         headers: { "Content-Type": "application/json" },
-                        body: JSON.stringify({
-                            username: data.username,
-                            password: data.password,
-                        }),
+                        body: JSON.stringify(data),
                         credentials: "include",
                     });
 
                     const res_data = await res.json();
                     if (res_data.status === 200) {
-                        registerMessage.textContent = res_data.message;
-                        registerMessage.className = "message success";
-                        localStorage.setItem("user_id", res_data.user_id);
-                        localStorage.setItem("username", res_data.username);
+                        message.textContent = "Account created!";
+                        message.className = "message success";
+                        setTimeout(
+                            () => (window.location.href = "/profile"),
+                            500
+                        );
                     } else {
-                        registerMessage.textContent =
-                            res_data.error || "Registration failed";
-                        registerMessage.className = "message error";
+                        message.textContent =
+                            res_data.detail || "Something went wrong.";
+                        message.className = "message error";
                     }
                 } catch (err) {
-                    registerMessage.textContent = err.message;
-                    registerMessage.className = "message error";
+                    message.textContent = err.message;
+                    message.className = "message error";
                 }
             });
         </script>
