Refactor: Remove home page and update header and profile templates
- Deleted the home.html file and created a new index.jinja2 for the home page.
- Updated the header.jinja2 to include user avatar and navigation links.
- Enhanced profile.jinja2 with improved layout and functionality for editing username and avatar.
- Added confirmation popup for account deletion in profile settings.
- Refactored post block template to include author avatar and improved action buttons.
- Updated stylesheets for better layout and design consistency across pages.
- Implemented JavaScript functionality for dynamic post editing and deletion.

--- a/app/static/pages/login.html
+++ b/app/static/pages/login.html
@@ -7,7 +7,6 @@
         <link rel="stylesheet" href="/static/styles/base.css" />
         <link rel="stylesheet" href="/static/styles/layout.css" />
         <link rel="stylesheet" href="/static/styles/forms.css" />
-        <link rel="stylesheet" href="/static/styles/posts.css" />
     </head>
     <body>
         <main
@@ -36,7 +35,7 @@
                 </div>
                 <p id="message" class="message"></p>
             </form>
-            <div class="footer">
+            <div class="card-footer">
                 Don't have an account? <a href="/auth/register">Sign Up</a
                 ><br />
                 Forgot your password?
