--- a/app/static/pages/register.html
+++ b/app/static/pages/register.html
@@ -44,7 +44,7 @@
                 </div>
                 <p id="message" class="message"></p>
             </form>
-            <div class="footer">
+            <div class="card-footer">
                 Already have an account? <a href="/auth/login">Sign in</a>
             </div>
         </main>
