Refactor: Update .gitignore, add README.md, and modify Docker configuration; improve registration page messages and layout styles

--- a/app/static/pages/register.html
+++ b/app/static/pages/register.html
@@ -63,7 +63,7 @@
         const data = Object.fromEntries(formData.entries());
 
         if (data.password !== data.password_repeat) {
-            message.textContent = "Пароли не совпадают";
+            message.textContent = "Passwords do not match.";
             message.className = "message error";
             return;
         }
